simplify api, make more consistent
