# api.pb.go
@@ -65,12 +65,10 @@ const _ = grpc.SupportPackageIsVersion4
 type APIClient interface {
 	// Create new URL query
 	QueryURLV1(ctx context.Context, in *QueryURLRequests, opts ...grpc.CallOption) (*QueryReplies, error)
-	// Results of active or unexpired query
-	QueryURLResultV1(ctx context.Context, in *QueryPollRequest, opts ...grpc.CallOption) (*QueryResult, error)
 	// Create new content query
 	QueryContentV1(ctx context.Context, in *QueryContentRequests, opts ...grpc.CallOption) (*QueryReplies, error)
 	// Results of active or unexpired query
-	QueryContentResultV1(ctx context.Context, in *QueryPollRequest, opts ...grpc.CallOption) (*QueryResult, error)
+	QueryResultV1(ctx context.Context, in *QueryPollRequest, opts ...grpc.CallOption) (*QueryResult, error)
 }
 
 type aPIClient struct {
@@ -90,15 +88,6 @@ func (c *aPIClient) QueryURLV1(ctx context.Context, in *QueryURLRequests, opts .
 	return out, nil
 }
 
-func (c *aPIClient) QueryURLResultV1(ctx context.Context, in *QueryPollRequest, opts ...grpc.CallOption) (*QueryResult, error) {
-	out := new(QueryResult)
-	err := grpc.Invoke(ctx, "/zvelo.msg.API/QueryURLResultV1", in, out, c.cc, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
 func (c *aPIClient) QueryContentV1(ctx context.Context, in *QueryContentRequests, opts ...grpc.CallOption) (*QueryReplies, error) {
 	out := new(QueryReplies)
 	err := grpc.Invoke(ctx, "/zvelo.msg.API/QueryContentV1", in, out, c.cc, opts...)
@@ -108,9 +97,9 @@ func (c *aPIClient) QueryContentV1(ctx context.Context, in *QueryContentRequests
 	return out, nil
 }
 
-func (c *aPIClient) QueryContentResultV1(ctx context.Context, in *QueryPollRequest, opts ...grpc.CallOption) (*QueryResult, error) {
+func (c *aPIClient) QueryResultV1(ctx context.Context, in *QueryPollRequest, opts ...grpc.CallOption) (*QueryResult, error) {
 	out := new(QueryResult)
-	err := grpc.Invoke(ctx, "/zvelo.msg.API/QueryContentResultV1", in, out, c.cc, opts...)
+	err := grpc.Invoke(ctx, "/zvelo.msg.API/QueryResultV1", in, out, c.cc, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -122,12 +111,10 @@ func (c *aPIClient) QueryContentResultV1(ctx context.Context, in *QueryPollReque
 type APIServer interface {
 	// Create new URL query
 	QueryURLV1(context.Context, *QueryURLRequests) (*QueryReplies, error)
-	// Results of active or unexpired query
-	QueryURLResultV1(context.Context, *QueryPollRequest) (*QueryResult, error)
 	// Create new content query
 	QueryContentV1(context.Context, *QueryContentRequests) (*QueryReplies, error)
 	// Results of active or unexpired query
-	QueryContentResultV1(context.Context, *QueryPollRequest) (*QueryResult, error)
+	QueryResultV1(context.Context, *QueryPollRequest) (*QueryResult, error)
 }
 
 func RegisterAPIServer(s *grpc.Server, srv APIServer) {
@@ -152,24 +139,6 @@ func _API_QueryURLV1_Handler(srv interface{}, ctx context.Context, dec func(inte
 	return interceptor(ctx, in, info, handler)
 }
 
-func _API_QueryURLResultV1_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(QueryPollRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(APIServer).QueryURLResultV1(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/zvelo.msg.API/QueryURLResultV1",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(APIServer).QueryURLResultV1(ctx, req.(*QueryPollRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
 func _API_QueryContentV1_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(QueryContentRequests)
 	if err := dec(in); err != nil {
@@ -188,20 +157,20 @@ func _API_QueryContentV1_Handler(srv interface{}, ctx context.Context, dec func(
 	return interceptor(ctx, in, info, handler)
 }
 
-func _API_QueryContentResultV1_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+func _API_QueryResultV1_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(QueryPollRequest)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(APIServer).QueryContentResultV1(ctx, in)
+		return srv.(APIServer).QueryResultV1(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/zvelo.msg.API/QueryContentResultV1",
+		FullMethod: "/zvelo.msg.API/QueryResultV1",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(APIServer).QueryContentResultV1(ctx, req.(*QueryPollRequest))
+		return srv.(APIServer).QueryResultV1(ctx, req.(*QueryPollRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -215,16 +184,12 @@ var _API_serviceDesc = grpc.ServiceDesc{
 			Handler:    _API_QueryURLV1_Handler,
 		},
 		{
-			MethodName: "QueryURLResultV1",
-			Handler:    _API_QueryURLResultV1_Handler,
-		},
-		{
 			MethodName: "QueryContentV1",
 			Handler:    _API_QueryContentV1_Handler,
 		},
 		{
-			MethodName: "QueryContentResultV1",
-			Handler:    _API_QueryContentResultV1_Handler,
+			MethodName: "QueryResultV1",
+			Handler:    _API_QueryResultV1_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
@@ -234,26 +199,25 @@ var _API_serviceDesc = grpc.ServiceDesc{
 func init() { proto.RegisterFile("zvelo/msg/api.proto", fileDescriptorApi) }
 
 var fileDescriptorApi = []byte{
-	// 324 bytes of a gzipped FileDescriptorProto
+	// 308 bytes of a gzipped FileDescriptorProto
 	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0x12, 0xae, 0x2a, 0x4b, 0xcd,
 	0xc9, 0xd7, 0xcf, 0x2d, 0x4e, 0xd7, 0x4f, 0x2c, 0xc8, 0xd4, 0x2b, 0x28, 0xca, 0x2f, 0xc9, 0x17,
 	0xe2, 0x04, 0x0b, 0xea, 0xe5, 0x16, 0xa7, 0x4b, 0x89, 0x22, 0xe4, 0x0b, 0x4b, 0x53, 0x8b, 0x2a,
 	0x21, 0x2a, 0xa4, 0x64, 0xd2, 0xf3, 0xf3, 0xd3, 0x73, 0x52, 0x41, 0x7a, 0xf4, 0x13, 0xf3, 0xf2,
-	0xf2, 0x4b, 0x12, 0x4b, 0x32, 0xf3, 0xf3, 0x8a, 0x21, 0xb2, 0x46, 0xdb, 0x99, 0xb9, 0x98, 0x1d,
+	0xf2, 0x4b, 0x12, 0x4b, 0x32, 0xf3, 0xf3, 0x8a, 0x21, 0xb2, 0x46, 0x07, 0x98, 0xb8, 0x98, 0x1d,
 	0x03, 0x3c, 0x85, 0xe2, 0xb8, 0xb8, 0x02, 0x41, 0x9a, 0x42, 0x83, 0x7c, 0xc2, 0x0c, 0x85, 0xa4,
 	0xf5, 0xe0, 0xc6, 0xea, 0xc1, 0x84, 0x83, 0x52, 0x0b, 0x4b, 0x53, 0x8b, 0x4b, 0x8a, 0xa5, 0xc4,
 	0xd1, 0x25, 0x83, 0x52, 0x0b, 0x72, 0x32, 0x53, 0x8b, 0x95, 0xa4, 0x9a, 0x2e, 0x3f, 0x99, 0xcc,
 	0x24, 0xa2, 0xc4, 0xaf, 0x5f, 0x66, 0x08, 0x76, 0x42, 0x66, 0x6a, 0xb1, 0x7e, 0x69, 0x51, 0x8e,
-	0x15, 0xa3, 0x96, 0x50, 0x2e, 0x97, 0x00, 0xc2, 0xa0, 0xe2, 0xd2, 0x9c, 0x12, 0x6c, 0xb6, 0x04,
-	0xe4, 0xe7, 0xe4, 0x40, 0xad, 0x91, 0x12, 0xc3, 0xb4, 0x05, 0xa4, 0x4d, 0x49, 0x05, 0x6c, 0x89,
-	0x9c, 0x90, 0x0c, 0x9a, 0x25, 0xfa, 0xd5, 0x45, 0x10, 0x9d, 0xf1, 0x99, 0x29, 0xb5, 0x42, 0x59,
-	0x5c, 0x7c, 0x60, 0x4d, 0xce, 0xf9, 0x79, 0x25, 0xa9, 0x79, 0x20, 0xcb, 0xe4, 0xd1, 0xcd, 0x83,
-	0x4a, 0x11, 0xf6, 0x96, 0x1c, 0xd8, 0x46, 0x09, 0x25, 0x61, 0x64, 0x1b, 0x93, 0x21, 0xba, 0x41,
-	0x5e, 0x2b, 0xe5, 0x12, 0x41, 0x35, 0x90, 0x12, 0xef, 0x69, 0x80, 0x2d, 0x53, 0x12, 0x52, 0xc0,
-	0x62, 0x19, 0x8a, 0x17, 0x9d, 0xec, 0x2e, 0x3c, 0x94, 0x63, 0xb8, 0xf1, 0x50, 0x8e, 0xe1, 0xc1,
-	0x43, 0x39, 0xc6, 0x0f, 0x0f, 0xe5, 0x18, 0x1b, 0x1e, 0xc9, 0x31, 0xae, 0x78, 0x24, 0xc7, 0x78,
-	0xe2, 0x91, 0x1c, 0xe3, 0x85, 0x47, 0x72, 0x8c, 0x0f, 0x1e, 0xc9, 0x31, 0xbe, 0x78, 0x24, 0xc7,
-	0xf0, 0xe1, 0x91, 0x1c, 0xe3, 0x84, 0xc7, 0x72, 0x0c, 0x51, 0x3c, 0x10, 0x2b, 0x33, 0xc1, 0x69,
-	0x24, 0x89, 0x0d, 0x9c, 0x00, 0x8c, 0x01, 0x01, 0x00, 0x00, 0xff, 0xff, 0xce, 0xc3, 0xcd, 0x09,
-	0x57, 0x02, 0x00, 0x00,
+	0x15, 0xa3, 0x96, 0x50, 0x16, 0x17, 0x1f, 0x58, 0xad, 0x73, 0x7e, 0x5e, 0x49, 0x6a, 0x5e, 0x49,
+	0x98, 0xa1, 0x90, 0x3c, 0xba, 0x31, 0x50, 0x29, 0xc2, 0xf6, 0xc8, 0x81, 0xed, 0x91, 0x50, 0x12,
+	0x46, 0xb6, 0x27, 0x19, 0xa2, 0x1b, 0x64, 0x57, 0x2e, 0x17, 0x2f, 0x54, 0x7d, 0x71, 0x69, 0x4e,
+	0x09, 0x36, 0xef, 0x04, 0xe4, 0xe7, 0xe4, 0x40, 0xed, 0x91, 0x12, 0xc3, 0xb4, 0x06, 0xa4, 0x4d,
+	0x49, 0x1d, 0x6c, 0x8b, 0xa2, 0x90, 0x3c, 0xb2, 0x2d, 0x45, 0x60, 0x39, 0xfd, 0xea, 0x22, 0x88,
+	0xe6, 0xf8, 0xcc, 0x94, 0x5a, 0x27, 0xbb, 0x0b, 0x0f, 0xe5, 0x18, 0x6e, 0x3c, 0x94, 0x63, 0x78,
+	0xf0, 0x50, 0x8e, 0xf1, 0xc3, 0x43, 0x39, 0xc6, 0x86, 0x47, 0x72, 0x8c, 0x2b, 0x1e, 0xc9, 0x31,
+	0x9e, 0x78, 0x24, 0xc7, 0x78, 0xe1, 0x91, 0x1c, 0xe3, 0x83, 0x47, 0x72, 0x8c, 0x2f, 0x1e, 0xc9,
+	0x31, 0x7c, 0x78, 0x24, 0xc7, 0x38, 0xe1, 0xb1, 0x1c, 0x43, 0x14, 0x0f, 0xc4, 0xc6, 0x4c, 0x70,
+	0x64, 0x25, 0xb1, 0x81, 0x63, 0xc2, 0x18, 0x10, 0x00, 0x00, 0xff, 0xff, 0x41, 0xf0, 0x69, 0x1c,
+	0xe0, 0x01, 0x00, 0x00,
 }
